--- a/css/portifoliio.css
+++ b/css/portifoliio.css
@@ -3,42 +3,51 @@ body, div, h1, h2, h3, h4, h5, h6, p, ul, ol, li, dl, dt, dd, img, form, fieldse
 }
 
 body {
-	font-family: Helvetica, Arial, Sans-Serif;
+	background: #eee;
+	font-family: open sans light;
    line-height: 24px;
-	background: url(ime/logo.jg) center top no-repeat;
+
 }
 
-#container {
+/*#container {
 	width: 925px;
    margin: 0 auto;
    padding: 143px 0 0 0;
-}
+}*/
 
 #header {
-  height:103px;
-	background-image: url("../image/logo.jpg") no-repeat;
-	padding: 0 0 50px 0;
-  border-width: thick;
-  border-color: black;
-    border-style: solid;
-    border-bottom: thick dotted black;
+  height:100px;
+	background-image: url("../image/logo.jpg") no-repeat ;
+   background: transparent -moz-linear-gradient(left center , rgb(216, 227, 231) 0%, rgb(235, 235, 150) 38%, rgb(216, 227, 231) 92%) repeat scroll 0% 0%;
+	padding: 0 0 40px 0;
+  margin-top: 20px;
+    border-width: thick;
 
 }
+#header img{
+	width:380px;
+	padding-top: 30px;
+}
+
 
 	#header h1 {
 		float: left;
 	}
 
-	#header ul#categories {
+ ul#categories {
 		float: right;
      list-style: none;
     margin: 16px 0 0 0;
-    padding-top: 50px;
+    padding-top: 20px;
+		padding-right: 10px;
+		padding-top: 50px;
+
 	}
-		#header ul#categories li {
-			float: left; margin: 0 0 0 40px;
+		 ul#categories li {
+			float: right;
+			 margin: 0 0 0 30px;
 		}
-			#header ul#categories li a {
+			 ul#categories li a {
 				display: block;
 				font-size: 16px;
         font-weight: bold;
@@ -46,9 +55,40 @@ body {
          color: #a42988;
          text-decoration: none;
 			}
-				#header ul#categories li a:hover {
+				 ul#categories li a:hover {
 					color: #006ab1;
 				}
+        header{
+           background: transparent -moz-linear-gradient(left center , rgb(216, 227, 231) 0%, rgb(235, 235, 150) 38%, rgb(216, 227, 231) 92%) repeat scroll 0% 0%;
+        }
+
+				.whole{
+					background-color: #fff;
+				}
+				.main{
+					margin-top: 30px;
+				}
+				.main #heading{
+					text-align: left;
+					font-weight: 400;
+					font-size: 60px;
+					/*padding-top: 50px;*/
+				}
+        .main #heading{
+          text-align: left;
+          font-weight: 400;
+          font-size: 60px;
+          /*padding-top: 50px;*/
+          background: #b3ffe5;
+        }
+        .main img{
+          width: 300px;
+          height: 250px;
+          padding-top: 25px;
+        }
+        .main{
+         background-color: #eee;
+        }
         .main img{
           width: 300px;
           height: 250px;
@@ -67,37 +107,41 @@ body {
 
         .main h1{
           font-size: 20px;
-          font-family: fantasy;
+          font-family: monospace;
           padding-bottom: 20px;
         }
-        footer{
-          height:250px;
-          font-size: 32px;
-          font-style: italic;
+        .footer{
+          height:200px;
+          font-size: 20px;
+          font-style: open sans light;
           text-align: center;
           margin-top: 15px;
-          font-size: 25px;
+
            background: transparent -moz-linear-gradient(left center , rgb(216, 227, 231) 0%, rgb(235, 235, 150) 38%, rgb(216, 227, 231) 92%) repeat scroll 0% 0%;
 
         }
-        footer form{
-           padding-top: 15px;
- 					padding-bottom: 15px;
+        .footer form{
+           /*padding-top: 15px;
+ 					padding-bottom: 15px;*/
         }
- 			 footer .textbox {
- 			   width: 280px; height: 35px; padding: 0px}
-
- 				footer form .submit{
- 					padding-top: 30px;
+ 			 .footer .textbox {
+ 			   /*width: 280px; height: 35px; padding: 0px}*/
+ }
+ 				.footer form .submit{
+ 					padding-top: 10px;
  					padding-left:0px;
  					margin-left: 0px;
+ 					 width: 50px;
+ 				}
+ 				.footer .img{
+ 					float:inherit;
  				}
 
 
-        footer div img{
-          height: 50px;
-          width: 50px;
-          float: inherit;
+        .footer div img{
+          height: 30px;
+          width: 30px;
+
           padding-left: 20px;
           padding-top: 15px;
         }
