--- a/css/service.css
+++ b/css/service.css
@@ -1,44 +1,56 @@
+@import url('http://fonts.googleapis.com/css?family=Open+Sans');
+
 body, div, h1, h2, h3, h4, h5, h6, p, ul, ol, li, dl, dt, dd, img, form, fieldset, input, blockquote {
 	margin: 0; padding: 0; border: 0;
 }
 
 body {
-	font-family: Helvetica, Arial, Sans-Serif;
+	background: #eee;
+	font-family: sans-serif;
    line-height: 24px;
-	background: url(ime/logo.jg) center top no-repeat;
+
 }
 
-#container {
+/*#container {
 	width: 925px;
    margin: 0 auto;
    padding: 143px 0 0 0;
-}
+}*/
 
 #header {
-  height:103px;
-	background-image: url("../image/logo.jpg") no-repeat;
-	padding: 0 0 50px 0;
-  border-width: thick;
-  border-color: black;
-    border-style: solid;
-    border-bottom: thick dotted black;
+  height:100px;
+	background-image: url("../image/logo.jpg") no-repeat ;
+	padding: 0 0 40px 0;
+  /*border-width: thick;
+  border-color: black;*/
+background-color: #fff;
+    border-bottom: thick  black;
 
 }
+#header img{
+	width:380px;
+	padding-top: 30px;
+}
+
 
 	#header h1 {
 		float: left;
 	}
 
-	#header ul#categories {
+ ul#categories {
 		float: right;
      list-style: none;
     margin: 16px 0 0 0;
-    padding-top: 50px;
+    padding-top: 20px;
+		padding-right: 10px;
+		padding-top: 50px;
+
 	}
-		#header ul#categories li {
-			float: left; margin: 0 0 0 40px;
+		 ul#categories li {
+			float: right;
+			 margin: 0 0 0 30px;
 		}
-			#header ul#categories li a {
+			 ul#categories li a {
 				display: block;
 				font-size: 16px;
         font-weight: bold;
@@ -46,8 +58,20 @@ body {
          color: #a42988;
          text-decoration: none;
 			}
-				#header ul#categories li a:hover {
+				 ul#categories li a:hover {
 					color: #006ab1;
+				}
+				.whole{
+					background-color: #fff;
+				}
+				.main{
+					margin-top: 30px;
+				}
+				.main #heading{
+					text-align: left;
+					font-weight: 400;
+					font-size: 60px;
+					/*padding-top: 50px;*/
 				}
         .main img{
           width: 300px;
@@ -60,33 +84,37 @@ body {
           padding-top: 15px;
         }
         .main{
+					background-color: #fff;
           align-items: center;
           margin-top: 10px;
+					  font-family: sans-serif;
           /*background: transparent -moz-linear-gradient(left center , rgb(216, 227, 231) 0%, rgb(235, 235, 150) 38%, rgb(216, 227, 231) 92%) repeat scroll 0% 0%;*/
         }
 
         .main h1{
           font-size: 20px;
-          font-family: fantasy;
+        font-family:  sans-serif;
           padding-bottom: 20px;
+					padding-top:35px;
         }
         .hero {
           height: 600px;
           width: 100%;
-          background-image: url("../image/GOH-Banner.jpg");
+          background-image: url("../image/hero.jpg");
 
         }
         .hero h1{
           padding-top: 150px;
-          font-family: fantasy;
+          font-family: sans-serif;
           font-style: normal;
-          font-weight: 600;
+          font-weight: 400;
           margin-bottom: 0.5rem;
           margin-top: 0.5rem;
           text-rendering: optimizeLegibility;
           color:white;
           text-transform: full-width;
           font-size: 20px;
+					text-align: center;
         }
 
 
@@ -94,11 +122,12 @@ body {
           margin-top: 50px;
          padding-top: 20px;
          padding-bottom: 20px;
-         height:500px;
+         /*height:500px;*/
+				 background-color: #fff;
        }
        .part2 .primary{
-           width: 50px;
-           height:100px;
+           /*width: 50px;
+           height:100px;*/
             float: left;
            font-size: 20px;
            margin-left: 0px;
@@ -110,86 +139,102 @@ body {
          font-weight: 400;
          line-height:1.2rem;
          font-size: 16px;
-         font-family: monospace;
-         width:450px;
+         font-family:  sans-serif;
+         /*width:450px;*/
        }
        .part2 .secondary h1{
             font-size: 25px;
             padding-bottom: 20px;
-               font-weight: 600;
+               /*font-weight: 600;*/
        }
-       /*.part2 img{
-         width:350px;
-         height:550px;
+       .part2 .primary img{
+         width:300px;
+         height:200px;
          float: left;
-       }*/
+				 padding-top: 30px;
+       }
+			 .part2 p{
+				 padding-top: 15px;
+			 }
        .part3{
-				 background-color: #eee;
-height: 500px;
-       margin-top: 10px;
-       padding-top:25px;
+				 background-color: #fff;
+
+       margin-top: 30px;
+       padding-top:20px;
+			 padding-bottom: 20px;
 
        }
        .part3 .primary{
          /*width: 250px;
          /*height: 600px;*/*/
-       font-size: 15px;
-       float: left;
-       margin-right: 0px;
+				 /*height: 200px;*/
+				 font-weight: 400;
+				 line-height:1.2rem;
+				 font-size: 16px;
+				 font-family: sans-serif;
+
        }
-       .part3 .primary h1{
-         font-size: 20px;
-         font-style: oblique;
-         font-family: sans-serif;
-         text-decoration: underline;
-         color:black;
-				 padding-top: 0px;
-       }
+			 .part3 p{
+				 padding-top: 25px;
+				 	line-height: 24px;
+
+			 }
        .part3 .primary h2{
+				 font-size: 25px;
+				 padding-bottom: 20px;
+						font-weight: 400;
+						padding-top: 10px;
+						line-height: 20px;
+       }
+       /*.part3 .primary h2{
          font-size: 18px;
          font-style: oblique;
          font-family: sans-serif;
-       }
+       }*/
        .part3 .primary h4{
          font-size: 20px;
          font-style: oblique;
          font-family: sans-serif;
        }
        .part3 img{
-         width:550px;
-         height:500px;
+         width:300px;
+				 padding-top: 50px;
          float: right;
 				 padding-left: 50px;
        }
 
-       footer{
-         height:250px;
-         font-size: 32px;
-         font-style: italic;
+       .footer{
+         height:200px;
+         font-size: 20px;
+         font-style:  normal;
          text-align: center;
          margin-top: 15px;
-         font-size: 25px;
+
           background: transparent -moz-linear-gradient(left center , rgb(216, 227, 231) 0%, rgb(235, 235, 150) 38%, rgb(216, 227, 231) 92%) repeat scroll 0% 0%;
 
        }
-       footer form{
-          padding-top: 15px;
-					padding-bottom: 15px;
+       .footer form{
+          /*padding-top: 15px;
+					padding-bottom: 15px;*/
        }
-			 footer .textbox {
-			   width: 280px; height: 35px; padding: 0px}
-
-				footer form .submit{
-					padding-top: 30px;
+			 .footer .textbox {
+			   /*width: 280px; height: 35px; padding: 0px}*/
+}
+				.footer form .submit{
+					padding-top: 10px;
 					padding-left:0px;
 					margin-left: 0px;
+					 width: 50px;
+				}
+				.footer .img{
+					float:inherit;
 				}
 
 
-       footer div img{
-         height: 50px;
-         width: 50px;
-         float: inherit;
+       .footer div img{
+         height: 30px;
+         width: 30px;
+
          padding-left: 20px;
          padding-top: 15px;
        }
