--- a/css/portifoliio.css
+++ b/css/portifoliio.css
@@ -70,17 +70,17 @@ body {
 				}
 				.main #heading{
 					text-align: left;
-					font-weight: 400;
-					font-size: 60px;
+					font-weight: 200;
+					font-size: 50px;
 					/*padding-top: 50px;*/
 				}
-        .main #heading{
+        /*.main #heading{
           text-align: left;
-          font-weight: 400;
+          font-weight: 00;
           font-size: 60px;
           /*padding-top: 50px;*/
           background: #b3ffe5;
-        }
+        }*/
         .main img{
           width: 300px;
           height: 250px;
