--- a/css/portifoliio.css
+++ b/css/portifoliio.css
@@ -1,27 +1,31 @@
+@import url('http://fonts.googleapis.com/css?family=Open+Sans');
+
 body, div, h1, h2, h3, h4, h5, h6, p, ul, ol, li, dl, dt, dd, img, form, fieldset, input, blockquote {
 	margin: 0; padding: 0; border: 0;
 }
 
 body {
 	background: #eee;
+	/*font-family: sans-serif;*/
 	font-family: 'Open Sans', sans-serif;
    line-height: 24px;
 
 }
 
-/*#container {
+#container {
 	width: 925px;
    margin: 0 auto;
    padding: 143px 0 0 0;
-}*/
+}
 
 #header {
   height:100px;
 	background-image: url("../image/logo.jpg") no-repeat ;
-   background: transparent -moz-linear-gradient(left center , rgb(216, 227, 231) 0%, rgb(235, 235, 150) 38%, rgb(216, 227, 231) 92%) repeat scroll 0% 0%;
 	padding: 0 0 40px 0;
-  margin-top: 20px;
-    border-width: thick;
+  /*border-width: thick;
+  border-color: black;*/
+background-color:#fff ;
+    border-bottom: thick  black;
 
 }
 #header img{
@@ -58,10 +62,6 @@ body {
 				 ul#categories li a:hover {
 					color: #006ab1;
 				}
-        /*header{
-           background: transparent -moz-linear-gradient(left center , rgb(216, 227, 231) 0%, rgb(235, 235, 150) 38%, rgb(216, 227, 231) 92%) repeat scroll 0% 0%;
-        }*/
-
 				.whole{
 					background-color: #fff;
 				}
@@ -70,25 +70,10 @@ body {
 				}
 				.main #heading{
 					text-align: left;
-					font-weight: 200;
-					font-size: 50px;
+					font-weight: 400;
+					font-size: 60px;
 					/*padding-top: 50px;*/
 				}
-        /*.main #heading{
-          text-align: left;
-          font-weight: 00;
-          font-size: 60px;
-          /*padding-top: 50px;*/
-          background: #b3ffe5;
-        }*/
-        .main img{
-          width: 300px;
-          height: 250px;
-          padding-top: 25px;
-        }
-        .main{
-         background-color: #eee;
-        }
         .main img{
           width: 300px;
           height: 250px;
@@ -100,8 +85,10 @@ body {
           padding-top: 15px;
         }
         .main{
+					background-color: #fff;
           align-items: center;
           margin-top: 10px;
+
           /*background: transparent -moz-linear-gradient(left center , rgb(216, 227, 231) 0%, rgb(235, 235, 150) 38%, rgb(216, 227, 231) 92%) repeat scroll 0% 0%;*/
         }
 
@@ -109,39 +96,49 @@ body {
           font-size: 20px;
 
           padding-bottom: 20px;
+					padding-top:35px;
         }
-        .footer{
-          height:200px;
-          font-size: 20px;
-          font-style: open sans light;
-          text-align: center;
-          margin-top: 15px;
 
-           background: transparent -moz-linear-gradient(left center , rgb(216, 227, 231) 0%, rgb(235, 235, 150) 38%, rgb(216, 227, 231) 92%) repeat scroll 0% 0%;
+       .footer{
+         height:100px;
+         font-size: px;
+         font-style:  normal;
+         text-align: ;
+         margin-top: px;
 
-        }
-        .footer form{
-           /*padding-top: 15px;
- 					padding-bottom: 15px;*/
-        }
- 			 .footer .textbox {
- 			   /*width: 280px; height: 35px; padding: 0px}*/
- }
- 				.footer form .submit{
- 					padding-top: 10px;
- 					padding-left:0px;
- 					margin-left: 0px;
- 					 width: 50px;
- 				}
- 				.footer .img{
- 					float:inherit;
- 				}
+          background: transparent -moz-linear-gradient(left center , rgb(216, 227, 231) 0%, rgb(235, 235, 150) 38%, rgb(216, 227, 231) 92%) repeat scroll 0% 0%;
+
+       }
+       /*.footer form{
+          /*padding-top: 15px;
+					padding-bottom: 15px;
+       }
+			 .footer .textbox {
+			   /*width: 280px; height: 35px; padding: 0px}*/
+
+				.footer form .submit{
+					/*padding-top: 10px;
+					padding-left:0px;*/
+					margin-left: 0px;
+					 width: 50px;
+				}
+				/*.footer .img h1{
+        float: right;
+				}*/
+.footer div h4{
+	float:right;
+	padding-right: 400px;
+	padding-bottom: 20px;
+}
+.footer div img{
+
+}
+
+       .footer div img{
+         height: 20px;
+         width: 30px;
+         float:right;
+	padding-left: 20px;
 
 
-        .footer div img{
-          height: 30px;
-          width: 30px;
-
-          padding-left: 20px;
-          padding-top: 15px;
-        }
+       }
